[gd_scene load_steps=12 format=2]

[ext_resource path="res://Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://World_tileset.tres" type="TileSet" id=2]
[ext_resource path="res://Player2.tscn" type="PackedScene" id=3]
[ext_resource path="res://GunPickUp.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scripts/MainScene2.gd" type="Script" id=5]

[ext_resource path="res://Scripts/pressR.gd" type="Script" id=6]
[ext_resource path="res://Scripts/ScoreTitle.gd" type="Script" id=7]
[ext_resource path="res://ScoreTens.gd" type="Script" id=8]
[ext_resource path="res://Scripts/ScoreOnes.gd" type="Script" id=9]
[ext_resource path="res://Assets/2020-03-22_-_A_Bit_Of_Hope_-_David_Fesliyan.mp3" type="AudioStream" id=6]
[ext_resource path="res://Assets/Sprite-0001-background2.png" type="Texture" id=7]
[ext_resource path="res://Ihopeitworkstileset.tres" type="TileSet" id=8]


[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 182, 32.5 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 25.5, 250.5 )

[sub_resource type="ImageTexture" id=3]

[node name="MainScene" type="Node2D"]
position = Vector2( 0, 1 )
script = ExtResource( 5 )

[node name="TileMap_Ground" type="TileMap" parent="." groups=["tile"]]
tile_set = ExtResource( 2 )
cell_size = Vector2( 32, 32 )
collision_layer = 7
collision_mask = 19
format = 1
tile_data = PoolIntArray( 3, 2, 0, 28, 2, 0, 65539, 2, 0, 65564, 2, 0, 65567, 0, 0, 65568, 0, 0, 65569, 0, 0, 196606, 0, 0, 196607, 0, 0, 131072, 0, 0, 131075, 0, 0, 131076, 0, 0, 131077, 0, 0, 131078, 0, 0, 131087, 2, 0, 131096, 0, 0, 131097, 0, 0, 131098, 0, 0, 131099, 0, 0, 131100, 0, 0, 196623, 2, 0, 262144, 2, 0, 262159, 2, 0, 262174, 2, 0, 327680, 2, 0, 327681, 0, 0, 327682, 0, 0, 327689, 0, 0, 327690, 0, 0, 327691, 0, 0, 327692, 2, 0, 327693, 2, 0, 327694, 2, 0, 327695, 2, 0, 327696, 2, 0, 327697, 2, 0, 327698, 2, 0, 327699, 0, 0, 327700, 0, 0, 327701, 0, 0, 327708, 0, 0, 327709, 0, 0, 327710, 2, 0, 524291, 0, 0, 524292, 0, 0, 524293, 0, 0, 524294, 0, 0, 524298, 2, 0, 524309, 2, 0, 524312, 0, 0, 524313, 0, 0, 524314, 0, 0, 524315, 0, 0, 589834, 2, 0, 589845, 2, 0, 655370, 2, 0, 655371, 0, 0, 655372, 0, 0, 655379, 0, 0, 655380, 0, 0, 655381, 2, 0, 720896, 0, 0, 720897, 0, 0, 720898, 0, 0, 720924, 0, 0, 720925, 0, 0, 720926, 0, 0, 851974, 0, 0, 851982, 2, 0, 851985, 2, 0, 851992, 0, 0, 917508, 0, 0, 917509, 0, 0, 917510, 0, 0, 917518, 2, 0, 917521, 2, 0, 917528, 0, 0, 917529, 0, 0, 917530, 0, 0, 983040, 2, 0, 983054, 0, 0, 983055, 0, 0, 983056, 0, 0, 983057, 0, 0, 983070, 2, 0, 1048576, 2, 0, 1048577, 2, 0, 1048605, 2, 0, 1048606, 2, 0, 1114113, 2, 0, 1114141, 2, 0, 1179649, 2, 0, 1179650, 2, 0, 1179651, 2, 0, 1179652, 2, 0, 1179653, 2, 0, 1179654, 2, 0, 1179655, 2, 0, 1179656, 2, 0, 1179657, 2, 0, 1179658, 2, 0, 1179659, 2, 0, 1179660, 2, 0, 1179661, 2, 0, 1179662, 2, 0, 1179663, 2, 0, 1179664, 2, 0, 1179665, 2, 0, 1179666, 2, 0, 1179667, 2, 0, 1179668, 2, 0, 1179669, 2, 0, 1179670, 2, 0, 1179671, 2, 0, 1179672, 2, 0, 1179673, 2, 0, 1179674, 2, 0, 1179675, 2, 0, 1179676, 2, 0, 1179677, 2, 0 )

[node name="TileMap_Platform" type="TileMap" parent="."]
tile_set = ExtResource( 8 )
cell_size = Vector2( 32, 32 )
collision_layer = 20
collision_mask = 16
format = 1

[node name="Player" parent="." instance=ExtResource( 1 )]
position = Vector2( 172, 430 )
collision_layer = 1
collision_mask = 4

[node name="Player2" parent="." instance=ExtResource( 3 )]
position = Vector2( 820, 430 )
collision_layer = 2
collision_mask = 4

[node name="Area2D" parent="." instance=ExtResource( 4 )]
position = Vector2( 141, 215 )

[node name="Area2D2" parent="." instance=ExtResource( 4 )]
position = Vector2( 850, 216 )

[node name="Area2D3" parent="." instance=ExtResource( 4 )]
position = Vector2( 512, 470 )

[node name="OOB" type="Area2D" parent="." groups=["oob"]]
position = Vector2( 31, -2 )
collision_layer = 17
collision_mask = 17
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="OOB"]
position = Vector2( -182, 578 )
shape = SubResource( 1 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="OOB"]
position = Vector2( -339, 295 )
shape = SubResource( 2 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="OOB"]
position = Vector2( 1111, 577 )
shape = SubResource( 1 )

[node name="CollisionShape2D4" type="CollisionShape2D" parent="OOB"]
position = Vector2( 1267, 294 )
shape = SubResource( 2 )


[node name="ScoreTitle" type="Sprite" parent="."]
position = Vector2( 500, 80 )
script = ExtResource( 7 )

[node name="pressR" type="Sprite" parent="."]
position = Vector2( 500, 500 )
script = ExtResource( 6 )

[node name="p1ScoreTens" type="Sprite" parent="."]
position = Vector2( 300, 200 )
script = ExtResource( 8 )

[node name="p2ScoreTens" type="Sprite" parent="."]
position = Vector2( 600, 200 )
script = ExtResource( 8 )

[node name="p1ScoreOnes" type="Sprite" parent="."]
position = Vector2( 382, 200 )
script = ExtResource( 9 )

[node name="p2ScoreOnes" type="Sprite" parent="."]
position = Vector2( 682, 200 )
script = ExtResource( 9 )

[connection signal="reset" from="." to="Area2D" method="_on_MainScene_reset"]
[connection signal="reset" from="." to="Area2D2" method="_on_MainScene_reset"]
[connection signal="reset" from="." to="Area2D3" method="_on_MainScene_reset"]
[connection signal="reset" from="." to="ScoreTitle" method="_on_MainScene_reset"]
[connection signal="reset" from="." to="p1ScoreTens" method="_on_MainScene_reset"]
[connection signal="reset" from="." to="p1ScoreOnes" method="_on_MainScene_reset"]
[connection signal="reset" from="." to="p2ScoreTens" method="_on_MainScene_reset"]
[connection signal="reset" from="." to="p2ScoreOnes" method="_on_MainScene_reset"]
[connection signal="reset" from="." to="pressR" method="_on_MainScene_reset"]
[connection signal="score" from="." to="ScoreTitle" method="_on_MainScene_score"]
[connection signal="score" from="." to="p1ScoreTens" method="_on_MainScene_score"]
[connection signal="score" from="." to="p1ScoreOnes" method="_on_MainScene_score"]
[connection signal="score" from="." to="p2ScoreTens" method="_on_MainScene_score"]
[connection signal="score" from="." to="p2ScoreOnes" method="_on_MainScene_score"]
[connection signal="score" from="." to="pressR" method="_on_MainScene_score"]
[connection signal="death1" from="Player" to="." method="_on_Player_death1"]
[connection signal="death2" from="Player2" to="." method="_on_Player2_death2"]

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0
texture = SubResource( 3 )

[node name="Sprite-0001-background2" type="Sprite" parent="TextureRect"]
position = Vector2( 536, 199 )
scale = Vector2( 1, 1.37203 )
z_index = -2
texture = ExtResource( 7 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
pause_mode = 2
stream = ExtResource( 6 )
volume_db = -11.0
autoplay = true

